# flex

./: .gitignore  Cargo.toml  LICENSE  README.md  sample.json
src/: apply_bch_and_parity.rs  apply_checksums.rs  bch_calculator.rs  block.rs  blocks.rs  codeword_biw1.rs  codeword_biw2.rs  codeword_biw3.rs  codeword_biw4.rs  cw_address_short.rs  cw_biw1.rs  cw_biw2.rs  cw_biw3.rs  cw_biw4.rs  cw_fiw.rs  cw_message_alpha.rs  cw_message_alpha_chars.rs  cw_message_alpha_content.rs  cw_message_alpha_header.rs  cw_message_alpha_signature.rs  cw_statics.rs  cw_vector_alpha.rs  fourbit_checksum.rs  frame.rs  get_address_cw_short.rs  header_builder.rs  interleaver.rs  lib.rs  main.rs  message.rs  parity.rs
src/codewords/: address_short.rs  biw1.rs  biw2.rs  biw3.rs  biw4.rs  codeword.rs  cw_address_short.rs  cw_biw1.rs  cw_message_alpha.rs  cw_vector_alpha.rs  fiw.rs  message_alpha.rs  message_alpha_content.rs  message_alpha_header.rs  message_alpha_signature.rs  mod.rs  vector_alpha.rs
src/helper/: apply_bch_and_parity.rs  mod.rs
